--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -207,5 +207,53 @@ h4{
   writing-mode: vertical-lr;
 } */
 
+/* ============ CSS for Filter ============= */
 
+#locationFilter, #guestCapacityFilter {
+  border: 1px solid #ced4da;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: #f8f9fa;
+  font-size: 16px;
+  color: #495057;
+  font-family: Arial, sans-serif;
+  width: 100%;
+  max-width: 250px;
+}
 
+/* Add a little shadow for a card-like effect */
+#locationFilter, #guestCapacityFilter {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Add a transition effect for the hover state */
+#locationFilter:hover {
+  border-color: #007bff;
+  outline: none;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+label {
+  display: block;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 8px;
+  color: #343a40;
+}
+
+.col-md-3 {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+select {
+  border-radius: 5px;
+  padding: 8px 12px;
+  font-size: 16px;
+}
+
+#guestCapacityFilter:hover {
+  border-color: #007bff;
+  outline: none;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
