--- a/src/app/room-availability-gantt/room-availability-gantt.component.html
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.html
@@ -1,5 +1,20 @@
 <div class="container-fluid">
   <div class="row">
+    <div class="col-md-3">
+      <label for="locationFilter">Location:</label>
+      <select id="locationFilter" (change)="onLocationFilterChange($event)">
+        <option value="">All Locations</option>
+        <option *ngFor="let location of locations" [value]="location">{{ location }}</option>
+      </select>
+    </div>
+    <div class="col-md-3">
+      <label for="guestCapacityFilter">Number of Persons:</label>
+      <select id="guestCapacityFilter" (change)="onGuestCapacityFilterChange($event)">
+        <option value="">All Capacities</option>
+        <option *ngFor="let capacity of guestCapacities" [value]="capacity">{{ capacity }} or more</option>
+      </select>
+    </div>
+
     <div class="col-md-12">
       <div class="legends container">
         <div class="row legend">
@@ -40,7 +55,8 @@
             {{ day }}<br>
             <span>{{ getDayName(day) }}</span>
           </div>
-          <ng-container *ngFor="let room of rooms">
+          <!-- <ng-container *ngFor="let room of rooms"> -->
+            <ng-container *ngFor="let room of filteredRooms">
             <div class="room-name">Room {{ room.roomId }}</div>
                 <div *ngFor="let day of days"
                 [ngClass]="getCellClass(room.roomId, day)"
